[metadata]
name = pygrb_lc
version = 0.0.4
author = Mozgunov Georgiy
author_email = georgiy99@bk.ru
description = Python package for GRB analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Jorezzz/pygrb
project_urls =
    Bug Tracker = https://github.com/Jorezzz/pygrb/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src